--- a/smsproject1/templates/adminchangepwd.html
+++ b/smsproject1/templates/adminchangepwd.html
@@ -11,15 +11,15 @@
    {% csrf_token %}
     <table style="font-family: 'Times New Roman', Times, serif;">
         <tr>
-            <td>Enter Old Pssword: </td>
-            <td><input type="text" name="opwd" required/></td>
+            <td><b>Enter Old Pssword: </b></td>
+            <td><b><input type="text" name="opwd" required/></b></td>
         </tr>
 
         <tr><td>&nbsp;</td></tr>
 
 
          <tr>
-            <td>Enter New Password: </td>
+            <td><b>Enter New Password: </b></td>
             <td><input type="password" name="npwd" required/></td>
         </tr>
 
