--- a/smsproject1/templates/aviewfeedback1.html
+++ b/smsproject1/templates/aviewfeedback1.html
@@ -8,8 +8,8 @@
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
         <thead>
         <tr bgcolor="lightblue">
-            <td>Student ID</td>
-            <td>View</td>
+            <td  style="width: 50%;"><b>Student ID</b></td>
+            <td><b>View</b></td>
 
         </tr>
         </thead>
