--- a/smsproject1/templates/aviewfeedback2.html
+++ b/smsproject1/templates/aviewfeedback2.html
@@ -5,9 +5,9 @@
     <h3 style="font-family: 'Times New Roman', Times, serif;"><b>&#x2705;  Student Feedback Details &#x2705;  </b></h3>
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
 
-    <tr align="center">
-        <td>Student ID</td>
-        <td> {{z.sid}}</td>
+    <tr align="center" bgcolor="lightblue">
+        <td><b>Student ID</b></td>
+        <td><b> {{z.sid}} </b></td>
     </tr>
     <tr align="center">
         <td>Faculty ID</td>
