--- a/smsproject1/templates/aviewstu1.html
+++ b/smsproject1/templates/aviewstu1.html
@@ -29,7 +29,8 @@
             <td>{{i.contact}}</td>
             <td>
                 <a href="/updatestudent2/{{i.studentid}}">Update</a><br><br>
-                <a href="/astuinternals/{{i.studentid}}/{{i.cur_ay}}/{{i.cur_sem}}/{{i.program}}/{{i.department}}">Internals</a><br><br>
+                <a href="/astuinternals/{{i.studentid}}">Internals</a><br><br><br>
+                <a href="/asgpa0/{{i.studentid}}">SGPA</a>
             </td>
         </tr>
         {% endfor %}
