--- a/smsproject1/templates/displaystudentcourse.html
+++ b/smsproject1/templates/displaystudentcourse.html
@@ -8,9 +8,9 @@
 <table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;">
     <thead>
     <tr bgcolor="lightblue">
-        <td>CourseCode</td>
-        <td>Course Title</td>
-        <td>Action</td>
+        <td><b>CourseCode</b></td>
+        <td><b>Course Title</b></td>
+        <td><b>Action</b></td>
     </tr>
     </thead>
     <tbody id="myTable">
