--- a/smsproject1/templates/facultycourse.html
+++ b/smsproject1/templates/facultycourse.html
@@ -2,25 +2,25 @@
 
 {% block 'body' %}
 <center>
-<h2 style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Course Details &#x25BC;</b></h2>
+<h2 style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Course Details &#x25BC;</b></h2><br>
 <!--Total no. of courses assigned = {{count}} -->
- <input class="form-control" id="myInput" type="text" placeholder="Search ..">
+ <input class="form-control" id="myInput" type="text" placeholder="Search .."><br><br>
 
- <table border="1" class="table table-bordered table-striped" style="font-size: 14px; font-family: 'Times New Roman', Times, serif; margin-left:50px;" align="center">
+ <table border="1" class="table table-bordered table-striped" style="font-size: 15px; font-family: 'Times New Roman', Times, serif; margin-left:50px;" align="center">
      <thead>
 
     <tr bgcolor="lightblue">
-        <td>Department</td>
-        <td>Program</td>
-        <td>Academic Year</td>
-        <td>Semester</td>
-        <td>Year</td>
-        <td>Course Code</td>
-        <td>Course Title</td>
-        <td>LTPS</td>
-        <td>Course Credits</td>
-        <td>Section</td>
-        <td>Faculty Type</td>
+        <td><b>Department</b></td>
+        <td><b>Program</b></td>
+        <td><b>Academic Year</b></td>
+        <td><b>Semester</b></td>
+        <td><b>Year</b></td>
+        <td><b>Course Code</b></td>
+        <td><b>Course Title</b></td>
+        <td><b>LTPS</b></td>
+        <td><b>Course Credits</b></td>
+        <td><b>Section</b></td>
+        <td><b>Faculty Type</b></td>
     </tr>
      </thead>
 
