--- a/smsproject1/templates/facultyhome.html
+++ b/smsproject1/templates/facultyhome.html
@@ -18,7 +18,7 @@
   <ul>
 <a href="{% url 'facultyhome' %}">Home</a>
       <a href="{% url 'viewfstudents1' %}">View Students</a>
-       <a href="{% url 'postatt1' %}">Post Attendance</a>
+
        <li class="services">
       <a>Courses</a>
        <ul class="dropdown">
@@ -33,6 +33,7 @@
  <a href="{% url 'fshome' %}">StudentData</a>
  <a href="{% url 'fgrievance0' %}">Grievances</a>
 <a href="{% url 'fviewfeedback0' %}">View Feedbacks</a>
+<a href="{% url 'ftmyprofile' %}">MyProfile</a>
 <a href="{% url 'facultyupdtpwd' %}">Change password</a>&nbsp;&nbsp;
 <a href="{% url 'facultylogin' %}">LogOut</a>
 
