--- a/smsproject1/templates/ffilter.html
+++ b/smsproject1/templates/ffilter.html
@@ -34,7 +34,7 @@
          <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><label><b>Academic Year:</b></label></td>
+            <td><label><b>Batch Academic Year:</b></label></td>
             <td>
                 <select name="ay" required>
                     <option value="">--Select--</option>
@@ -45,17 +45,7 @@
         </tr>
           <tr><td>&nbsp;</td></tr>
 
-         <tr>
-            <td><label><b>Semester:</b></label></td>
-            <td>
-                <select name="sem" required>
-                    <option value="">--Select--</option>
-                    <option value="ODD">ODD</option>
-                    <option value="EVEN">EVEN</option>
-                </select>
-            </td>
-        </tr>
-            <tr><td>&nbsp;</td></tr>
+
 
         <tr>
             <td><input type="submit"  value="SUBMIT" class="addbutton"/></td>
