--- a/smsproject1/templates/fviewfaculty.html
+++ b/smsproject1/templates/fviewfaculty.html
@@ -2,14 +2,12 @@
 
 {% block 'body' %}
 
-<style>
-    #customers tr:nth-child(even){background-color: #d9d9d9;}
-</style>
+
 <h4 align="center" style="font-family: 'Times New Roman', Times, serif; color:green;">{{msg}}</h4>
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Faculty Details &#x25BC; </b></h2>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Faculty Details &#x25BC; </b></h2><br>
 
 <center>
-    <input class="form-control" id="myInput" type="text" placeholder="Search">
+    <input class="form-control" id="myInput" type="text" placeholder="Search"><br><br>
     <table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;" id="customers">
         <thead>
 
