--- a/smsproject1/templates/fviewfeedback0.html
+++ b/smsproject1/templates/fviewfeedback0.html
@@ -7,12 +7,12 @@
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
         <thead>
         <tr bgcolor="lightblue">
-            <td>Subject</td>
-            <td>AcademicYear</td>
-            <td>Cycle</td>
-            <td>Semester</td>
-            <td>Section</td>
-            <td>ViewAnalysis</td>
+            <td><b>Subject</b></td>
+            <td><b>AcademicYear</b></td>
+            <td><b>Cycle</b></td>
+            <td><b>Semester</b></td>
+            <td><b>Section</b></td>
+            <td><b>ViewAnalysis</b></td>
         </tr>
         </thead>
         {% for i in x %}
