--- a/smsproject1/templates/fviewgr1.html
+++ b/smsproject1/templates/fviewgr1.html
@@ -69,7 +69,7 @@
 <center>
 
     <h4 style="font-family: 'Times New Roman', Times, serif; color:green;">{{message}}</h4>
-    <h2 style="font-family: 'Times New Roman', Times, serif;"><b>⚠️ My Grievances ⚠️</b></h2><br>
+    <h2 style="font-family: 'Times New Roman', Times, serif;"><b>⚠️ Grievances ⚠️</b></h2><br>
     <input class="form-control" id="myInput" type="text" placeholder="Search .."><br><br>
 
     <table border="1px" style="font-family: 'Times New Roman', Times, serif;" id="customers">
