--- a/smsproject1/templates/regadmin3.html
+++ b/smsproject1/templates/regadmin3.html
@@ -4,14 +4,14 @@
 
 <center>
 
-   <h2 style="font-family: 'Times New Roman', Times, serif;"><b>Registration History of {{c.sid.studentid}}</b></h2>
+   <h2 style="font-family: 'Times New Roman', Times, serif;"><b>🔽 Registration History of {{c.sid.studentid}} 🔽</b></h2><br>
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
       <tr bgcolor="lightblue">
-        <td>CourseCode</td>
-        <td>CourseTitle</td>
-        <td>FacultyID</td>
-        <td>Faculty Name</td>
-        <td>Section</td>
+        <td><b>CourseCode</b></td>
+        <td><b>CourseTitle</b></td>
+        <td><b>FacultyID</b></td>
+        <td><b>Faculty Name</b></td>
+        <td><b>Section</b></td>
       </tr>
       {% if c.cc1 %}
        <tr>
