--- a/smsproject1/templates/sgr2.html
+++ b/smsproject1/templates/sgr2.html
@@ -28,17 +28,17 @@
 
 <center>
     <h2 style="font-family: 'Times New Roman', Times, serif;"><b>⚠️ My Grievances ⚠️</b></h2><br>
-      <input class="form-control" id="myInput" type="text" placeholder="Search .."><br>
+      <input class="form-control" id="myInput" type="text" placeholder="Search .."><br><br>
     <table border="1" style="font-family: 'Times New Roman', Times, serif;margin-left:50px;">
         <thead>
         <tr bgcolor="lightblue">
-            <td>Academic Year</td>
-            <td>Semester</td>
-            <td>Date and Time</td>
-            <td>Category</td>
-            <td width="20%;">Issue</td>
-            <td>Status</td>
-            <td>Solved</td>
+            <td><b>Academic Year</b></td>
+            <td><b>Semester</b></td>
+            <td><b>Date and Time</b></td>
+            <td><b>Category</b></td>
+            <td width="20%;"><b>Issue</b></td>
+            <td><b>Status</b></td>
+            <td><b>Solved</b></td>
         </tr>
         </thead>
         {% for i in x %}
