--- a/smsproject1/templates/stmyccontent.html
+++ b/smsproject1/templates/stmyccontent.html
@@ -4,14 +4,14 @@
 <center>
     <h3 style="font-family: 'Times New Roman', Times, serif;"><b>&#x1F4DA; Materials Available &#x1F4DA;</b></h3><br>
 
-    <table border="1" style="font-size:14px; font-family: 'Times New Roman', Times, serif;">
+    <table border="1" style="font-size:16px; font-family: 'Times New Roman', Times, serif;">
 
 
-        <tr>
-            <th style="width: 4px;">Course</th>
-            <th style="width: 3px;">Description</th>
-            <th style="width: 2px;">Link</th>
-            <th style="width: 2px;">File</th>
+        <tr bgcolor="lightblue">
+            <th style="width: 4px;"><b>Course</b></th>
+            <th style="width: 3px;"><b>Description</b></th>
+            <th style="width: 2px;"><b>Link</b></th>
+            <th style="width: 2px;"><b>File</b></th>
         </tr>
         {% for i in x %}
         <tr>
