--- a/smsproject1/templates/studenthome.html
+++ b/smsproject1/templates/studenthome.html
@@ -11,7 +11,7 @@
 
 <!-- Top Navbar -->
 <div class="topnavbar">
-  <h2 align="left" style="font-family: 'Times New Roman', Times, serif;"><strong>SCMS->></strong></h2>
+  <img src="{% static 'images/scmslogo.png' %}" width="80" height="50" style="margin-right:200px;">
 	<h2 align="center" style="font-family: 'Times New Roman', Times, serif; color:white; font-size:26px;">Student Course Management -> (Student Portal)</h2>
 	<h3 align="right" style="font-family: 'Times New Roman', Times, serif; color:white;">Welcome {{ssid}}</h3>
 </div>
