--- a/smsproject1/templates/stureg1.html
+++ b/smsproject1/templates/stureg1.html
@@ -8,8 +8,8 @@
         {% csrf_token %}
         <table style="font-family: 'Times New Roman', Times, serif; width: 80%;" class="table table-bordered table-striped" align="center" border="1">
             <tr bgcolor="lightblue">
-              <td style="width=80%;" align="center">Courses</td>
-              <td align="center">Faculty</td>
+              <td style="width=80%;" align="center"><b>Courses</b></td>
+              <td align="center"><b>Faculty</b></td>
             </tr>
             {% if m.c1 %}
             <tr>
