--- a/smsproject1/templates/sviewhandout3.html
+++ b/smsproject1/templates/sviewhandout3.html
@@ -5,9 +5,9 @@
     <h3 style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; Course Handouts Available &#x25BC;</b></h3><br>
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
         <tr bgcolor="lightblue">
-            <td>Course Code</td>
-            <td>Course Title</td>
-            <td>File</td>
+            <td><b>Course Code</b></td>
+            <td><b>Course Title</b></td>
+            <td><b>File</b></td>
         </tr>
 
         <tr>
