--- a/smsproject1/templates/sviewint1.html
+++ b/smsproject1/templates/sviewint1.html
@@ -5,8 +5,8 @@
     <h3 style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; Courses Available To View Internals &#x25BC;</b></h3><br>
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
         <tr bgcolor="lightblue">
-            <td>Course</td>
-            <td>Action</td>
+            <td><b>Course</b></td>
+            <td><b>Action</b></td>
         </tr>
         {% for i in x %}
          {% if i.cc1 %}
