--- a/smsproject1/templates/sviewint2.html
+++ b/smsproject1/templates/sviewint2.html
@@ -2,8 +2,8 @@
 
 {% block 'body' %}
 <center>
-    <table border="1" style="font-family: 'Times New Roman', Times, serif;">
-        <tr>
+    <table border="1" style="font-family: 'Times New Roman', Times, serif; font-size:20px;">
+        <tr bgcolor="lightblue">
             <td>CourseCode</td>
             <td>Sem1</td>
             <td>Sem2</td>
