--- a/smsproject1/templates/addfaculty.html
+++ b/smsproject1/templates/addfaculty.html
@@ -1,8 +1,9 @@
 {% extends 'adminhome.html' %}
 
 {% block 'body' %}
-<h3 align="center">ADD FACULTY DETAILS</h3>
-<h4 align="center" style="color:red">{{msg}}</h4>
+<h4 align="center" style="color:red;font-family: 'Times New Roman', Times, serif;">{{msg}}</h4>
+<h3 align="center" style="font-family: 'Times New Roman', Times, serif;"><b> 🆕 ADD FACULTY DETAILS 🆕</b></h3><br>
+
  <div class="box">
 <form align="center" method="post" class="form-control">
 
