--- a/smsproject1/templates/addstudent.html
+++ b/smsproject1/templates/addstudent.html
@@ -4,7 +4,7 @@
 {% block 'body' %}
 
    <h4 style="color:red;font-family: 'Times New Roman', Times, serif;" align="center">{{msg}}</h4><br>
-<h3 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x2193; ADD STUDENT &#x2193;</b></h3><br>
+<h3 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>🆕 ADD STUDENT 🆕</b></h3><br>
    <div class="box">
     <form align="center " method="post" class="form-control">
         {% csrf_token %}
