--- a/smsproject1/templates/agiveaccess0.html
+++ b/smsproject1/templates/agiveaccess0.html
@@ -1,23 +1,25 @@
 {% extends 'adminhome.html' %}
 
  {% block 'body' %}
-
 <script>
     function collectNumberData() {
         const b = [];
         const rows = document.querySelectorAll('tbody.myInput tr');
 
         rows.forEach((row) => {
-            const numberInput = row.querySelector('input[type="number"]');
+            const numberInputs = row.querySelectorAll('input[type="number"]');
+            const facultyid = row.querySelector('.facultyid').innerText.trim();
 
-                const facultyid = row.querySelector('.facultyid').innerText.trim();
-                const access = numberInput.value;
-                const rowData = {
-                    facultyid: facultyid,
-                    access: access
-                };
-                b.push(rowData);
+            // Access and Grievance Access
+            const access = numberInputs[0].value;
+            const graccess = numberInputs[1].value;
 
+            const rowData = {
+                facultyid: facultyid,
+                access: access,
+                graccess: graccess  // Include grievance access
+            };
+            b.push(rowData);
         });
 
         // Convert data to JSON and store it in a hidden input
@@ -25,11 +27,12 @@
     }
 </script>
 
+
 <h4 align="center" style="font-family: 'Times New Roman', Times, serif; color:green;">{{msg}}</h4>
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; Faculty LIST AVAILABLE &#x25BC; </b></h2>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>⬇️ FACULTY LIST AVAILABLE ⬇️</b></h2><br>
 
 <center>
-    <input class="form-control" id="myInput" type="text" placeholder="Search ...">
+    <input class="form-control" id="myInput" type="text" placeholder="Search ..."><br><br>
     <form id="facultyForm" action="{% url 'agiveaccess1' %}" method="post" onsubmit="collectNumberData()">
         {% csrf_token %}
         <table border="1" style="font-family: 'Times New Roman', Times, serif; margin-left:15px;">
@@ -37,15 +40,14 @@
                 <tr bgcolor="lightblue">
                     <td><b>Faculty id</b></td>
                     <td><b>Full name</b></td>
-                    <td><b>Gender</b></td>
                     <td><b>Department</b></td>
                     <td><b>Academic Year Joined</b></td>
                     <td><b>Qualification</b></td>
                     <td><b>Designation</b></td>
-                    <td><b>Password</b></td>
                     <td><b>Email</b></td>
                     <td><b>Contact</b></td>
-                    <td><b>Access</b></td>
+                    <td><b>Sub-Admin Access</b></td>
+                    <td><b>Grievance Access</b></td>
                 </tr>
             </thead>
             <tbody class="myInput">
@@ -53,15 +55,14 @@
                 <tr align="center">
                     <td class="facultyid">{{ faculty.facultyid }}</td>
                     <td class="fullname">{{ faculty.fullname }}</td>
-                    <td class="gender">{{ faculty.gender }}</td>
                     <td class="department">{{ faculty.department }}</td>
                     <td class="ay">{{ faculty.ay }}</td>
                     <td class="qualification">{{ faculty.qualification }}</td>
                     <td class="designation">{{ faculty.designation }}</td>
-                    <td class="password">{{ faculty.password }}</td>
                     <td class="email">{{ faculty.email }}</td>
                     <td class="contact">{{ faculty.contact }}</td>
                      <td><input type="number" value="{{faculty.access}}" min="0" max="1"/></td>
+                    <td><input type="number" value="{{faculty.graccess}}" min="0" max="1"/></td>
                 </tr>
                 {% endfor %}
             </tbody>
