--- a/smsproject1/templates/aviewgr1.html
+++ b/smsproject1/templates/aviewgr1.html
@@ -73,18 +73,18 @@
     <table border="1px" style="font-family: 'Times New Roman', Times, serif;">
          <thead>
         <tr bgcolor="lightblue">
-            <td>ID</td>
-            <td>PersonId</td>
-            <td>Name</td>
-            <td>Department</td>
-            <td>Program</td>
-            <td>Academic Year</td>
-            <td>Semester</td>
-            <td>Date and Time</td>
-            <td>Category</td>
-            <td>Issue</td>
-            <td>Status</td>
-            <td>Solved</td>
+            <td><b>ID</b></td>
+            <td><b>PersonId</b></td>
+            <td><b>Name</b></td>
+            <td><b>Department</b></td>
+            <td><b>Program</b></td>
+            <td><b>Academic Year</b></td>
+            <td><b>Semester</b></td>
+            <td><b>Date and Time</b></td>
+            <td><b>Category</b></td>
+            <td><b>Issue</b></td>
+            <td><b>Status</b></td>
+            <td><b>Solved</b></td>
         </tr>
          </thead>
         {% for i in lt %}
