--- a/smsproject1/templates/deletecourse.html
+++ b/smsproject1/templates/deletecourse.html
@@ -2,23 +2,23 @@
 
 {% block 'body' %}
 <center>
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>View Course Details</b></h2><br>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>📝 View Course Details 📝</b></h2><br>
 
- <input class="form-control" id="myInput" type="text" placeholder="Search ..."><br>
+ <input class="form-control" id="myInput" type="text" placeholder="Search ..."><br><br>
 
-<table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;">
+<table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;font-size:16px; margin-left:3%;">
     <tr bgcolor="lightblue">
-        <td>ID</td>
-        <td>Department</td>
-        <td>Program</td>
-        <td>Academic Year</td>
-        <td>Semester</td>
-        <td>Year</td>
-        <td>Course Code</td>
-        <td>Course Title</td>
-        <td>Action</td>
-        <td>LTPS</td>
-        <td>Course Credits</td>
+        <td><b>ID</b></td>
+        <td><b>Department</b></td>
+        <td><b>Program</b></td>
+        <td><b>Academic Year</b></td>
+        <td><b>Semester</b></td>
+        <td><b>Year</b></td>
+        <td><b>Course Code</b></td>
+        <td><b>Course Title</b></td>
+        <td><b>Course Credits</b></td>
+        <td><b>LTPS</b></td>
+        <td><b>Action</b></td>
     </tr>
 
     {% for course in coursesdata %}
