--- a/smsproject1/templates/facultycoursemapping.html
+++ b/smsproject1/templates/facultycoursemapping.html
@@ -1,12 +1,13 @@
 {% extends 'adminhome.html' %}
 
 {% block 'body' %}
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#10145; Faculty Courses Mapping &#11013;</b></h2><br>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>➡️ Faculty Courses Mapping  ⬅️</b></h2><br>
+    <center>
 
-<center>
     <input class="form-control" id="myInput" type="text" placeholder="Search ..">
     <a href="{% url 'addfacultycourse'%}">ADD</a><br><br>
-    <table border="2" class="table table-bordered table-striped" style="font-size: 13px;font-family: 'Times New Roman', Times, serif;">
+
+    <table border="2" class="table table-bordered table-striped" style="font-size: 15px;font-family: 'Times New Roman', Times, serif; margin-left:4%"">
         <thead>
             <tr bgcolor="lightblue">
                 <td><b>Department</b></td>
@@ -47,7 +48,7 @@
         </tbody>
         {% endfor %}
     </table>
-</center>
+    </center>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
