--- a/smsproject1/templates/fccontent1.html
+++ b/smsproject1/templates/fccontent1.html
@@ -2,27 +2,26 @@
 
 {% block 'body' %}
 <center>
-<h4 style="color:red" align="center">{{msg}}</h4>
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Course Details &#x25BC;</b></h2>
+<h4 style="color:red" align="center">{{msg}}</h4><br>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Course Details &#x25BC;</b></h2><br>
 
- <input class="form-control" id="myInput" type="text" placeholder="Search ...">
+ <input class="form-control" id="myInput" type="text" placeholder="Search ..."><br><br>
 
-<table border="2" class="table table-bordered table-striped" style="font-size:12px;">
+<table border="2" class="table table-bordered table-striped" style="font-size:15px;font-family: 'Times New Roman', Times, serif; width:70%">
     <thead>
     <tr bgcolor="lightblue">
-        <td>Department</td>
-        <td>Program</td>
-        <td>Academic Year</td>
-        <td>Semester</td>
-        <td>Year</td>
-        <td>Course Code</td>
-        <td>Course Title</td>
-        <td>LTPS</td>
-        <td>Course Credits</td>
-        <td>Component</td>
-        <td>Section</td>
-        <td>Faculty Type</td>
-        <td>Action</td>
+        <td><b>Department</b></td>
+        <td><b>Program</b></td>
+        <td><b>Academic Year</b></td>
+        <td><b>Semester</b></td>
+        <td><b>Year</b></td>
+        <td><b>Course Code</b></td>
+        <td><b>Course Title</b></td>
+        <td><b>LTPS</b></td>
+        <td><b>Course Credits</b></td>
+        <td><b>Section</b></td>
+        <td><b>Faculty Type</b></td>
+        <td><b>Action</b></td>
     </tr>
     </thead>
     {% for y in fc %}
@@ -37,7 +36,6 @@
          <td>{{y.course.coursetitle}}</td>
          <td>{{y.course.ltps}}</td>
          <td>{{y.course.credits}}</td>
-         <td>{{y.component}}</td>
          <td>{{y.section}}</td>
          <!-- <td>{{y.type}}</td>  displays either False or True  -->
          <td>
@@ -50,7 +48,7 @@
 
          </td>
          <td>
-             <a href="/fccontent2/{{y.course.coursecode}} ">Upload</a><br>
+             <a href="/fccontent2/{{y.course.coursecode}} ">Upload</a><br><br>
              <a href="/fccontent4/{{y.course.department}}/{{y.course.academicyear}}/{{y.course.year}}/{{y.course.semester}}/{{y.course.coursecode}}">My Uploads</a>
          </td>
 
@@ -59,6 +57,7 @@
     {% endfor %}
 
 </table>
+
 </center>
 
 <script>
