--- a/smsproject1/templates/fgr0.html
+++ b/smsproject1/templates/fgr0.html
@@ -14,7 +14,7 @@
 </div>
 
 <div id="content">
-     <h4 style="font-family: 'Times New Roman', Times, serif; color:green;">{{msg}}</h4><br>
+     <h4 style="font-family: 'Times New Roman', Times, serif; color:red; font-size:20px;">{{msg}}</h4><br>
     <img src="{% static 'images/grievance.png' %}" alt="Center Image" />
 </div>
 
