--- a/smsproject1/templates/regadmin2.html
+++ b/smsproject1/templates/regadmin2.html
@@ -4,20 +4,20 @@
 <center>
     <form method="post">
         {% csrf_token %}
-    <h2 style="font-family: 'Times New Roman', Times, serif;"><b>&#10145; Students Registration History  &#11013;</b></h2><br>
+    <h2 style="font-family: 'Times New Roman', Times, serif;"><b>🗓️ Students Registration History  🗓️</b></h2><br>
      <input class="form-control" id="myInput" type="text" placeholder="Search .."><br><br>
 
     <table border="1" style="font-family: 'Times New Roman', Times, serif;">
         <thead>
         <tr bgcolor="lightblue">
-            <td>Program</td>
-            <td>Department</td>
-            <td>ID</td>
-            <td>Fullname</td>
-            <td>Academic Year</td>
-            <td>Cycle</td>
-            <td>Semester</td>
-            <td>View</td>
+            <td><b>Program</b></td>
+            <td><b>Department</b></td>
+            <td><b>ID</b></td>
+            <td><b>Fullname</b></td>
+            <td><b>Academic Year</b></td>
+            <td><b>Cycle</b></td>
+            <td><b>Semester</b></td>
+            <td><b>View</b></td>
         </tr>
         </thead>
         {% for x in b %}
