--- a/smsproject1/templates/updatecourse2.html
+++ b/smsproject1/templates/updatecourse2.html
@@ -1,20 +1,22 @@
 {% extends 'adminhome.html' %}
 
 {% block 'body' %}
-<h2 align="center" style="color:red">{{msg}}</h2>
-<h3 align="center">Update Course</h3>
+<h2 align="center" style="color:red;font-family: 'Times New Roman', Times, serif;">{{msg}}</h2>
+<h3 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>🔄 UPDATE COURSE 🔄</b></h3>
 <br>
 <center>
 <form method="post" action="/updatecourse2" style="color:white">
     {% csrf_token %}
-    <table align="center" width="40%" height="50%" >
+    <div class="box">
+    <table align="center" width="40%" height="50%" style="font-family: 'Times New Roman', Times, serif;">
         <tr bgcolor="lightblue">
-            <td><label>CourseCode:</label></td>
+            <td><label><b>CourseCode:</b></label></td>
              <td><input type="text" required name="ccode" value="{{c.coursecode}}" placeholder="course - code" readonly/></td>
         </tr>
+        <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><label>Select Department:</label></td>
+            <td><label><b>Select Department:</b></label></td>
             <td>
                 <select name="dept" required>
                     <option value="{{c.department}} "></option>
@@ -23,10 +25,10 @@
                 </select>
             </td>
         </tr>
-
+          <tr><td>&nbsp;</td></tr>
 
        <tr>
-            <td><label>Select Program:</label></td>
+            <td><label><b>Select Program:</b></label></td>
             <td>
                 <select name="program" required>
                     <option value="{{c.program}}"></option>
@@ -35,10 +37,10 @@
                 </select>
             </td>
         </tr>
-
+          <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><label>Select Academic Year:</label></td>
+            <td><label><b>Select Academic Year:</b></label></td>
             <td>
                 <select name="ay" required >
                     <option value="{{c.academicyear}}"></option>
@@ -47,9 +49,10 @@
                 </select>
             </td>
         </tr>
+          <tr><td>&nbsp;</td></tr>
 
          <tr>
-            <td><label>Select Semester:</label></td>
+            <td><label><b>Select Semester:</b></label></td>
             <td>
                 <select name="sem" required >
                     <option value="{{c.semester}} "></option>
@@ -58,33 +61,33 @@
                 </select>
             </td>
         </tr>
-
+          <tr><td>&nbsp;</td></tr>
 
         <tr>
-              <td><label>Enter Year: </label></td>
+              <td><label><b>Enter Year: </b></label></td>
             <td><input type="number" name="year"  value="{{c.year}}" min="1" max="4" required/></td>
         </tr>
-
-
-
-
+          <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><label>LTPS</label></td>
+            <td><label><b>LTPS</b></label></td>
             <td><input type="text" name="ltps" placeholder="{{c.ltps}}" required /></td>
         </tr>
+          <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><label>Credits</label></td>
+            <td><label><b>Credits</b></label></td>
             <td><input type="number" name="credits" placeholder="{{c.credits}}" min="0.0" max="8.0" /></td>
         </tr>
+          <tr><td>&nbsp;</td></tr>
 
         <tr>
-            <td><input type="submit"  value="Update" class="addbutton"/></td>
-             <td><input type="reset"  value="Clear" class="addbutton"/></td>
+            <td><input type="submit"  value="Update" class="addbutton"/></td>&nbsp;&nbsp;
+            <td><input type="reset"  value="Clear" class="addbutton"/></td>
         </tr>
 
     </table>
+        </div>
 </form>
     </center>
 {% endblock %}
