--- a/smsproject1/templates/viewfaculty.html
+++ b/smsproject1/templates/viewfaculty.html
@@ -2,11 +2,11 @@
 
 {% block 'body' %}
 <h4 align="center" style="font-family: 'Times New Roman', Times, serif; color:green;">{{msg}}</h4>
-<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>&#x25BC; View Faculty Details &#x25BC; </b></h2>
+<h2 align="center" style="font-family: 'Times New Roman', Times, serif;"><b>⬇️ View Faculty Details ⬇️ </b></h2><br>
 
 <center>
-    <input class="form-control" id="myInput" type="text" placeholder="Search">
-    <table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;">
+    <input class="form-control" id="myInput" type="text" placeholder="Search"><br><br>
+    <table border="2" class="table table-bordered table-striped" style="font-family: 'Times New Roman', Times, serif;margin-left:3%;font-size:16px;">
         <thead>
 
             <tr bgcolor="lightblue">
